k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app-service
  namespace: hello-world-app
  labels:
    app: hello-world-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: hello-world-app
